<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView android:id="@+id/tv_list_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <TextView android:id="@+id/tv_list_restau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_list_restau"/>
    <Spinner android:id="@+id/sp_list_restau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView android:id="@+id/tv_list_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_list_meal"/>
    <ListView android:id="@+id/lv_list_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
    </ListView>

</LinearLayout>
